--- a/contact.html
+++ b/contact.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>New Earth Syndicate - Shows</title>
+    <title>CONTACT N.E.S</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body class="shows-page" style="font-family: 'SPACE EXPLORER';">
+<body class="contact-page" style="font-family: '3270-Regular';">
     <!-- Header section -->
     <header>
-        <h1>SHOWS</h1>
+        <h1>New Earth Syndicate</h1>
     </header>
     
     <!-- Navigation Bar -->
@@ -19,16 +19,13 @@
         <a href="shows.html"><img src="navSHOWS200x200.jpg" alt="Shows"></a>
         <a href="contact.html"><img src="navCONTACT200x200.jpg" alt="Contact"></a>
     </nav>
-    <div class="show">
-        <div class="image-container">
-            <img class="showsalien.gif" src="showsalien.gif" alt="far out">
-            <img src="horizontalline5.gif" alt="Horizontal Line">
-        </div>
-        <div class="image-container">
-            <img class="retro-image" src="Flyer.jpg" alt="Command?">
-        </div>
-    </div>
-    <!-- More shows -->
+
+    <!-- Contact section -->
+    <section id="contact">
+        <h2>Contact Us</h2>
+        <p>FOR DIRECT COMMUNICATION : <a href="mailto:info@newearthsyndicate.com">New.earth.syndicate@gmail.com</a></p>
+        <img src="horizontalline2.gif" alt="Vector engineered style globe viewed from space in green and purple colors">
+        <!-- Consider adding a contact form here -->
     </section>
 
     <!-- Footer with social media links -->
