--- a/releases.html
+++ b/releases.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>New Earth Syndicate - Shows</title>
+    <title>New Earth Syndicate - Releases</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body class="shows-page" style="font-family: 'SPACE EXPLORER';">
+<body class="releases-page" style="font-family: 'Kwark';">
     <!-- Header section -->
     <header>
-        <h1>SHOWS</h1>
+        <h1>Releases</h1>
     </header>
     
     <!-- Navigation Bar -->
@@ -19,16 +19,17 @@
         <a href="shows.html"><img src="navSHOWS200x200.jpg" alt="Shows"></a>
         <a href="contact.html"><img src="navCONTACT200x200.jpg" alt="Contact"></a>
     </nav>
-    <div class="show">
-        <div class="image-container">
-            <img class="showsalien.gif" src="showsalien.gif" alt="far out">
-            <img src="horizontalline5.gif" alt="Horizontal Line">
+
+    <!-- Releases section -->
+    <section id="releases">
+        <h2>Releases</h2>
+        <p>Unfortunately all modules released before 8/23 have been recalled. New information to follow shortly.</p>
+        <img src="3dradio.gif" alt="3D Radio">
+        <!-- Thumbnail 1 -->
+        <div class="release">
+            <iframe src="https://www.youtube.com" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-        <div class="image-container">
-            <img class="retro-image" src="Flyer.jpg" alt="Command?">
-        </div>
-    </div>
-    <!-- More shows -->
+        <!-- More thumbnails -->
     </section>
 
     <!-- Footer with social media links -->
