--- a/website.html
+++ b/website.html
@@ -23,9 +23,9 @@
     <div>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/h2-petWJw_U" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <img src="horizontalline4.gif" alt="Horizontal Line">
-        <img src="juggler.gif" alt="Juggler">
+        <img src="energyman.gif" alt="Juggler">
         <img src="horizontalline4.gif" alt="Horizontal Line">
-        <img src="energyman.gif" alt="Energy Man">
+        <img src="juggler.gif" alt="Energy Man">
     </div>
 
 </body>
