fixed nav responsiveness

--- a/contact.html
+++ b/contact.html
@@ -1,34 +1,61 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>CONTACT N.E.S</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body class="contact-page" style="font-family: '3270-Regular';">
-    <!-- Header section -->
-    <header>
-        <h1>New Earth Syndicate</h1>
-    </header>
-    
-    <!-- Navigation Bar -->
-    <nav>
-        <a href="website.html"><img src="navHOME.jpg" alt="Home"></a>
-        <a href="releases.html"><img src="navRELEASES200x200.jpg" alt="Releases"></a>
-        <a href="lore.html"><img src="navLORE200x200.jpg" alt="Lore"></a>
-        <a href="newsletter.html"><img src="navNEWSLETTER200x200.jpg" alt="Newsletter"></a>
-        <a href="shows.html"><img src="navSHOWS200x200.jpg" alt="Shows"></a>
-        <a href="contact.html"><img src="navCONTACT200x200.jpg" alt="Contact"></a>
-    </nav>
+    <head>
+        <title>CONTACT N.E.S</title>
+        <link rel="stylesheet" type="text/css" href="style.css" />
+    </head>
+    <body class="contact-page" style="font-family: '3270-Regular'">
+        <!-- Header section -->
+        <header>
+            <h1>New Earth Syndicate</h1>
+        </header>
 
-    <!-- Contact section -->
-    <section id="contact">
-        <h2>Contact Us</h2>
-        <p>FOR DIRECT COMMUNICATION : <a href="mailto:info@newearthsyndicate.com">New.earth.syndicate@gmail.com</a></p>
-        <img src="horizontalline2.gif" alt="Vector engineered style globe viewed from space in green and purple colors">
-        <!-- Consider adding a contact form here -->
-    </section>
+        <!-- Navigation Bar -->
+        <nav>
+            <div
+                style="
+                    display: flex;
+                    justify-content: center;
+                    flex-wrap: wrap;
+                    gap: 1rem;
+                "
+            >
+                <a href="website.html"><img src="navHOME.jpg" alt="Home" /></a>
+                <a href="releases.html"
+                    ><img src="navRELEASES200x200.jpg" alt="Releases"
+                /></a>
+                <a href="lore.html"
+                    ><img src="navLORE200x200.jpg" alt="Lore"
+                /></a>
+                <a href="newsletter.html"
+                    ><img src="navNEWSLETTER200x200.jpg" alt="Newsletter"
+                /></a>
+                <a href="shows.html"
+                    ><img src="navSHOWS200x200.jpg" alt="Shows"
+                /></a>
+                <a href="contact.html"
+                    ><img src="navCONTACT200x200.jpg" alt="Contact"
+                /></a>
+            </div>
+        </nav>
 
-    <!-- Footer with social media links -->
-    <!-- We'll add this later -->
-</body>
+        <!-- Contact section -->
+        <section id="contact">
+            <h2>Contact Us</h2>
+            <p>
+                FOR DIRECT COMMUNICATION :
+                <a href="mailto:info@newearthsyndicate.com"
+                    >New.earth.syndicate@gmail.com</a
+                >
+            </p>
+            <img
+                src="horizontalline2.gif"
+                alt="Vector engineered style globe viewed from space in green and purple colors"
+            />
+            <!-- Consider adding a contact form here -->
+        </section>
+
+        <!-- Footer with social media links -->
+        <!-- We'll add this later -->
+    </body>
 </html>
