--- a/lore.html
+++ b/lore.html
@@ -1,41 +1,77 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>New Earth Syndicate - Find Out More</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body class="lore-page" style="font-family: 'FairfaxItalic';">
-    <!-- Header section -->
-    <header>
-        <h1>New Earth Syndicate</h1>
-    </header>
-    
-    <!-- Navigation Bar -->
-    <nav>
-        <a href="website.html"><img src="navHOME.jpg" alt="Home"></a>
-        <a href="releases.html"><img src="navRELEASES200x200.jpg" alt="Releases"></a>
-        <a href="lore.html"><img src="navLORE200x200.jpg" alt="Lore"></a>
-        <a href="newsletter.html"><img src="navNEWSLETTER200x200.jpg" alt="Newsletter"></a>
-        <a href="shows.html"><img src="navSHOWS200x200.jpg" alt="Shows"></a>
-        <a href="contact.html"><img src="navCONTACT200x200.jpg" alt="Contact"></a>
-    </nav>
+    <head>
+        <title>New Earth Syndicate - Find Out More</title>
+        <link rel="stylesheet" type="text/css" href="style.css" />
+    </head>
+    <body class="lore-page" style="font-family: 'FairfaxItalic'">
+        <!-- Header section -->
+        <header>
+            <h1>New Earth Syndicate</h1>
+        </header>
 
-    <!-- Find Out More section -->
-    <section id="find-out-more">
-        <h2>Find Out More</h2>
-        <img src="animetutor.gif" alt="Anime Tutor">
-        <p>From the makers of Internet OG.  New Earth Syndicate is more than just an idea.  It's an entire framework.  It may be difficult to fully understand New Earth Syndicate's nature without experiencing it for yourself</p>
-        <p>Unravel Hidden potential and Discover uncharted pathways in the digitized cosmos reshape the boundaries of possibility
-From the makers of INTERNET 00 , New Earth Neural Networks presents the most advanced bioforge synthesis delivery system to date. Unravel hidden potential and discover uncharted pathways in the digitized cosmos. Be your own boss! State of the art silicon bio-synthesis delivers complex thought and design philosophy without interruption of service. 
-New Earth members can now experience TOTAL IMMERSION, thanks to our proprietary State of the art system of SONIC INDUCTION. </p>
-	<p> The seamless “real life” experience we have all been waiting for is finally yours. </p>
-        <div class="lore-images">
-            <img src="lorepic1.jpg" alt="Lore Picture 1">
-            <img src="lorepic2.jpg" alt="Lore Picture 2">
-        </div>
-    </section>
+        <!-- Navigation Bar -->
+        <nav>
+            <div
+                style="
+                    display: flex;
+                    justify-content: center;
+                    flex-wrap: wrap;
+                    gap: 1rem;
+                "
+            >
+                <a href="website.html"><img src="navHOME.jpg" alt="Home" /></a>
+                <a href="releases.html"
+                    ><img src="navRELEASES200x200.jpg" alt="Releases"
+                /></a>
+                <a href="lore.html"
+                    ><img src="navLORE200x200.jpg" alt="Lore"
+                /></a>
+                <a href="newsletter.html"
+                    ><img src="navNEWSLETTER200x200.jpg" alt="Newsletter"
+                /></a>
+                <a href="shows.html"
+                    ><img src="navSHOWS200x200.jpg" alt="Shows"
+                /></a>
+                <a href="contact.html"
+                    ><img src="navCONTACT200x200.jpg" alt="Contact"
+                /></a>
+            </div>
+        </nav>
 
-    <!-- Footer with social media links -->
-    <!-- We'll add this later -->
-</body>
+        <!-- Find Out More section -->
+        <section id="find-out-more">
+            <h2>Find Out More</h2>
+            <img src="animetutor.gif" alt="Anime Tutor" />
+            <p>
+                From the makers of Internet OG. New Earth Syndicate is more than
+                just an idea. It's an entire framework. It may be difficult to
+                fully understand New Earth Syndicate's nature without
+                experiencing it for yourself
+            </p>
+            <p>
+                Unravel Hidden potential and Discover uncharted pathways in the
+                digitized cosmos reshape the boundaries of possibility From the
+                makers of INTERNET 00, New Earth Neural Networks presents the
+                most advanced bioforge synthesis delivery system to date.
+                Unravel hidden potential and discover uncharted pathways in the
+                digitized cosmos. Be your own boss! State of the art silicon
+                bio-synthesis delivers complex thought and design philosophy
+                without interruption of service. New Earth members can now
+                experience TOTAL IMMERSION, thanks to our proprietary State of
+                the art system of SONIC INDUCTION.
+            </p>
+            <p>
+                The seamless “real life” experience we have all been waiting for
+                is finally yours.
+            </p>
+            <div class="lore-images">
+                <img src="lorepic1.jpg" alt="Lore Picture 1" />
+                <img src="lorepic2.jpg" alt="Lore Picture 2" />
+            </div>
+        </section>
+
+        <!-- Footer with social media links -->
+        <!-- We'll add this later -->
+    </body>
 </html>
