--- a/shows.html
+++ b/shows.html
@@ -12,13 +12,32 @@
     
     <!-- Navigation Bar -->
     <nav>
-        <a href="website.html"><img src="navHOME.jpg" alt="Home"></a>
-        <a href="releases.html"><img src="navRELEASES200x200.jpg" alt="Releases"></a>
-        <a href="lore.html"><img src="navLORE200x200.jpg" alt="Lore"></a>
-        <a href="newsletter.html"><img src="navNEWSLETTER200x200.jpg" alt="Newsletter"></a>
-        <a href="shows.html"><img src="navSHOWS200x200.jpg" alt="Shows"></a>
-        <a href="contact.html"><img src="navCONTACT200x200.jpg" alt="Contact"></a>
-    </nav>
+            <div
+                style="
+                    display: flex;
+                    justify-content: center;
+                    flex-wrap: wrap;
+                    gap: 1rem;
+                "
+            >
+                <a href="website.html"><img src="navHOME.jpg" alt="Home" /></a>
+                <a href="releases.html"
+                    ><img src="navRELEASES200x200.jpg" alt="Releases"
+                /></a>
+                <a href="lore.html"
+                    ><img src="navLORE200x200.jpg" alt="Lore"
+                /></a>
+                <a href="newsletter.html"
+                    ><img src="navNEWSLETTER200x200.jpg" alt="Newsletter"
+                /></a>
+                <a href="shows.html"
+                    ><img src="navSHOWS200x200.jpg" alt="Shows"
+                /></a>
+                <a href="contact.html"
+                    ><img src="navCONTACT200x200.jpg" alt="Contact"
+                /></a>
+            </div>
+        </nav>
     <div class="show">
         <div class="image-container">
             <img class="showsalien.gif" src="showsalien.gif" alt="far out">
