--- a/website.html
+++ b/website.html
@@ -1,32 +1,60 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>NEW EARTH SYNDICATE</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body class="website-page" style="font-family: 'Achron', 'Courier New', Courier, monospace;">
-    <!-- Header section -->
-    <header>
-        <h1>NEW EARTH SYNDICATE</h1>
-    </header>
-    
-    <!-- Navigation Bar -->
-    <nav>
-        <a href="website.html"><img src="navHOME.jpg" alt="Home"></a>
-        <a href="releases.html"><img src="navRELEASES200x200.jpg" alt="Releases"></a>
-        <a href="lore.html"><img src="navLORE200x200.jpg" alt="Lore"></a>
-        <a href="newsletter.html"><img src="navNEWSLETTER200x200.jpg" alt="Newsletter"></a>
-        <a href="shows.html"><img src="navSHOWS200x200.jpg" alt="Shows"></a>
-        <a href="contact.html"><img src="navCONTACT200x200.jpg" alt="Contact"></a>
-    </nav>
+    <head>
+        <title>NEW EARTH SYNDICATE</title>
+        <link rel="stylesheet" type="text/css" href="style.css" />
+    </head>
+    <body
+        class="website-page"
+        style="font-family: 'Achron', 'Courier New', Courier, monospace"
+    >
+        <!-- Header section -->
+        <header>
+            <h1>NEW EARTH SYNDICATE</h1>
+        </header>
 
-    <div>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/h2-petWJw_U" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <img src="horizontalline4.gif" alt="Horizontal Line">
-        <img src="energyman.gif" alt="Juggler">
-        <img src="horizontalline4.gif" alt="Horizontal Line">
-        <img src="juggler.gif" alt="Energy Man">
-    </div>
+        <!-- Navigation Bar -->
+        <nav>
+            <div
+                style="
+                    display: flex;
+                    justify-content: center;
+                    flex-wrap: wrap;
+                    gap: 1rem;
+                "
+            >
+                <a href="website.html"><img src="navHOME.jpg" alt="Home" /></a>
+                <a href="releases.html"
+                    ><img src="navRELEASES200x200.jpg" alt="Releases"
+                /></a>
+                <a href="lore.html"
+                    ><img src="navLORE200x200.jpg" alt="Lore"
+                /></a>
+                <a href="newsletter.html"
+                    ><img src="navNEWSLETTER200x200.jpg" alt="Newsletter"
+                /></a>
+                <a href="shows.html"
+                    ><img src="navSHOWS200x200.jpg" alt="Shows"
+                /></a>
+                <a href="contact.html"
+                    ><img src="navCONTACT200x200.jpg" alt="Contact"
+                /></a>
+            </div>
+        </nav>
 
-</body>
+        <div>
+            <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/h2-petWJw_U"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+            ></iframe>
+            <img src="horizontalline4.gif" alt="Horizontal Line" />
+            <img src="energyman.gif" alt="Juggler" />
+            <img src="horizontalline4.gif" alt="Horizontal Line" />
+            <img src="juggler.gif" alt="Energy Man" />
+        </div>
+    </body>
 </html>
