Updated site but without flex

--- a/contact.html
+++ b/contact.html
@@ -1,34 +1,32 @@
 <!DOCTYPE html>
+
 <html>
 <head>
-    <title>CONTACT N.E.S</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+<title>CONTACT N.E.S</title>
+<link href="style.css" rel="stylesheet" type="text/css"/>
 </head>
 <body class="contact-page" style="font-family: '3270-Regular';">
-    <!-- Header section -->
-    <header>
-        <h1>New Earth Syndicate</h1>
-    </header>
-    
-    <!-- Navigation Bar -->
-    <nav>
-        <a href="website.html"><img src="navHOME.jpg" alt="Home"></a>
-        <a href="releases.html"><img src="navRELEASES200x200.jpg" alt="Releases"></a>
-        <a href="lore.html"><img src="navLORE200x200.jpg" alt="Lore"></a>
-        <a href="newsletter.html"><img src="navNEWSLETTER200x200.jpg" alt="Newsletter"></a>
-        <a href="shows.html"><img src="navSHOWS200x200.jpg" alt="Shows"></a>
-        <a href="contact.html"><img src="navCONTACT200x200.jpg" alt="Contact"></a>
-    </nav>
-
-    <!-- Contact section -->
-    <section id="contact">
-        <h2>Contact Us</h2>
-        <p>FOR DIRECT COMMUNICATION : <a href="mailto:info@newearthsyndicate.com">New.earth.syndicate@gmail.com</a></p>
-        <img src="horizontalline2.gif" alt="Vector engineered style globe viewed from space in green and purple colors">
-        <!-- Consider adding a contact form here -->
-    </section>
-
-    <!-- Footer with social media links -->
-    <!-- We'll add this later -->
+<!-- Header section -->
+<header>
+<h1>New Earth Syndicate</h1>
+<a href="http://newearthsyndicate.bandcamp.com/" target="_blank"><img alt="bandcamplogo" class_="social-icon" src="bandcamplogo.png"/></a><a href="https://www.instagram.com/earth_net.info/" target="_blank"><img alt="instagramlogo" class_="social-icon" src="instagramlogo.png"/></a><a href="https://www.facebook.com/Earthnet.info/" target="_blank"><img alt="Facebook_Logo_(2019)" class_="social-icon" src="Facebook_Logo_(2019).png"/></a><a href="https://www.youtube.com/@NewEarthSyndicate-rt6ry" target="_blank"><img alt="youtubelogo" class_="social-icon" src="youtubelogo.png"/></a></header>
+<!-- Navigation Bar -->
+<nav>
+<a href="website.html"><img alt="Home" src="navHOME.jpg"/></a>
+<a href="releases.html"><img alt="Releases" src="navRELEASES200x200.jpg"/></a>
+<a href="lore.html"><img alt="Lore" src="navLORE200x200.jpg"/></a>
+<a href="newsletter.html"><img alt="Newsletter" src="navNEWSLETTER200x200.jpg"/></a>
+<a href="shows.html"><img alt="Shows" src="navSHOWS200x200.jpg"/></a>
+<a href="contact.html"><img alt="Contact" src="navCONTACT200x200.jpg"/></a>
+</nav>
+<!-- Contact section -->
+<section id="contact">
+<h2>Contact Us</h2>
+<p>FOR DIRECT COMMUNICATION : <a href="mailto:info@newearthsyndicate.com">New.earth.syndicate@gmail.com</a></p>
+<img alt="Vector engineered style globe viewed from space in green and purple colors" src="horizontalline2.gif"/>
+<!-- Consider adding a contact form here -->
+</section>
+<!-- Footer with social media links -->
+<!-- We'll add this later -->
 </body>
 </html>
