--- a/releases.html
+++ b/releases.html
@@ -1,38 +1,58 @@
 <!DOCTYPE html>
+
 <html>
 <head>
     <title>New Earth Syndicate - Releases</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="style.css" rel="stylesheet" type="text/css"/>
 </head>
 <body class="releases-page" style="font-family: 'Kwark';">
     <!-- Header section -->
     <header>
         <h1>Releases</h1>
+        <a href="http://newearthsyndicate.bandcamp.com/" target="_blank"><img alt="bandcamplogo" class_="social-icon" src="bandcamplogo.png"/></a>
+        <a href="https://www.instagram.com/earth_net.info/" target="_blank"><img alt="instagramlogo" class_="social-icon" src="instagramlogo.png"/></a>
+        <a href="https://www.facebook.com/Earthnet.info/" target="_blank"><img alt="Facebook_Logo_(2019)" class_="social-icon" src="Facebook_Logo_(2019).png"/></a>
+        <a href="https://www.youtube.com/@NewEarthSyndicate-rt6ry" target="_blank"><img alt="youtubelogo" class_="social-icon" src="youtubelogo.png"/></a>
     </header>
-    
     <!-- Navigation Bar -->
     <nav>
-        <a href="website.html"><img src="navHOME.jpg" alt="Home"></a>
-        <a href="releases.html"><img src="navRELEASES200x200.jpg" alt="Releases"></a>
-        <a href="lore.html"><img src="navLORE200x200.jpg" alt="Lore"></a>
-        <a href="newsletter.html"><img src="navNEWSLETTER200x200.jpg" alt="Newsletter"></a>
-        <a href="shows.html"><img src="navSHOWS200x200.jpg" alt="Shows"></a>
-        <a href="contact.html"><img src="navCONTACT200x200.jpg" alt="Contact"></a>
+        <a href="website.html"><img alt="Home" src="navHOME.jpg"/></a>
+        <a href="releases.html"><img alt="Releases" src="navRELEASES200x200.jpg"/></a>
+        <a href="lore.html"><img alt="Lore" src="navLORE200x200.jpg"/></a>
+        <a href="newsletter.html"><img alt="Newsletter" src="navNEWSLETTER200x200.jpg"/></a>
+        <a href="shows.html"><img alt="Shows" src="navSHOWS200x200.jpg"/></a>
+        <a href="contact.html"><img alt="Contact" src="navCONTACT200x200.jpg"/></a>
     </nav>
-
     <!-- Releases section -->
-    <section id="releases">
-        <h2>Releases</h2>
-        <p>Unfortunately all modules released before 8/23 have been recalled. New information to follow shortly.</p>
-        <img src="3dradio.gif" alt="3D Radio">
-        <!-- Thumbnail 1 -->
-        <div class="release">
-            <iframe src="https://www.youtube.com" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <section id="releases" style="text-align: left;">
+        <div style="display: flex; flex-direction: column; align-items: center;">
+            <!-- Existing Release: Rustic Sensations -->
+            <img alt="Rustic Sensations Album Cover" src="rusticcover.png" style="display: block; margin: 20px 0; max-width: 500px; max-height: 500px;"/>
+            <p style="text-align: center; font-weight: bold; margin: 20px 0; font-size: 1.5em; color: #FF66FF;">Rustic Sensations Out Now!</p>
+            <div style="text-align: center;">
+                <!-- Existing Links for Rustic Sensations -->
+                <a href="https://open.spotify.com/album/4VyPaWwpNEihc7bq0ow7Xm" style="display: block; text-align: center; margin: 10px 0; font-family: Arial; text-align: left;" target="_blank">Spotify</a>
+                <a href="https://music.apple.com/us/album/rustic-sensations-ep/1695093954" style="display: block; text-align: center; margin: 10px 0; font-family: Arial; text-align: left;" target="_blank">Apple Music</a>
+                <a href="https://www.youtube.com/playlist?list=OLAK5uy_nU9IKKYUMbaK9yr2xLga04czk7bsTWlig" style="display: block; text-align: center; margin: 10px 0; font-family: Arial; text-align: left;" target="_blank">YouTube</a>
+                <a href="https://bobbymetro.bandcamp.com/album/rustic-sensations" style="display: block; text-align: center; margin: 10px 0; font-family: Arial; text-align: left;" target="_blank">Bandcamp</a>
+                <a href="https://listen.tidal.com/album/302564723" style="display: block; text-align: center; margin: 10px 0; font-family: Arial; text-align: left;" target="_blank">Tidal</a>
+            </div>
         </div>
-        <!-- More thumbnails -->
+        
+        <!-- New Release: This Is Earth -->
+        <div style="display: flex; flex-direction: column; align-items: center;">
+            <img alt="This Is Earth Album Cover" src="thisisearthcover.png" style="display: block; margin: 20px 0; max-width: 500px; max-height: 500px;"/>
+            <p style="text-align: center; font-weight: bold; margin: 20px 0; font-size: 1.5em; color: #FF66FF;">This Is Earth Out Now!</p>
+            <div style="text-align: center;">
+                <a href="https://open.spotify.com/album/1AciKtuVNP9sj2FRhrmv1E?si=tErkdI37SXWdiMVADwchaw&nd=1" style="display: block; text-align: center; margin: 10px 0; font-family: Arial; text-align: left;" target="_blank">Spotify</a>
+                <a href="https://music.apple.com/us/album/this-is-earth-ep/1701511688" style="display: block; text-align: center; margin: 10px 0; font-family: Arial; text-align: left;" target="_blank">Apple Music</a>
+                <a href="https://www.youtube.com/playlist?list=PL3liNxsPyngveOXYp7zzzVfxeGjhi_8lE" style="display: block; text-align: center; margin: 10px 0; font-family: Arial; text-align: left;" target="_blank">YouTube</a>
+                <a href="https://bobbymetro.bandcamp.com/album/this-is-earth" style="display: block; text-align: center; margin: 10px 0; font-family: Arial; text-align: left;" target="_blank">Bandcamp</a>
+                <a href="https://listen.tidal.com/album/309607291" style="display: block; text-align: center; margin: 10px 0; font-family: Arial; text-align: left;" target="_blank">Tidal</a>
+            </div>
+        </div>
     </section>
-
     <!-- Footer with social media links -->
-    <!-- We'll add this later -->
+    <!-- To be added later -->
 </body>
 </html>
