--- a/shows.html
+++ b/shows.html
@@ -1,37 +1,36 @@
 <!DOCTYPE html>
+
 <html>
 <head>
-    <title>New Earth Syndicate - Shows</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+<title>New Earth Syndicate - Shows</title>
+<link href="style.css" rel="stylesheet" type="text/css"/>
 </head>
 <body class="shows-page" style="font-family: 'SPACE EXPLORER';">
-    <!-- Header section -->
-    <header>
-        <h1>SHOWS</h1>
-    </header>
-    
-    <!-- Navigation Bar -->
-    <nav>
-        <a href="website.html"><img src="navHOME.jpg" alt="Home"></a>
-        <a href="releases.html"><img src="navRELEASES200x200.jpg" alt="Releases"></a>
-        <a href="lore.html"><img src="navLORE200x200.jpg" alt="Lore"></a>
-        <a href="newsletter.html"><img src="navNEWSLETTER200x200.jpg" alt="Newsletter"></a>
-        <a href="shows.html"><img src="navSHOWS200x200.jpg" alt="Shows"></a>
-        <a href="contact.html"><img src="navCONTACT200x200.jpg" alt="Contact"></a>
-    </nav>
-    <div class="show">
-        <div class="image-container">
-            <img class="showsalien.gif" src="showsalien.gif" alt="far out">
-            <img src="horizontalline5.gif" alt="Horizontal Line">
-        </div>
-        <div class="image-container">
-            <img class="retro-image" src="Flyer.jpg" alt="Command?">
-        </div>
-    </div>
-    <!-- More shows -->
-    </section>
+<!-- Header section -->
+<header>
+<h1>SHOWS</h1>
+<a href="http://newearthsyndicate.bandcamp.com/" target="_blank"><img alt="bandcamplogo" class_="social-icon" src="bandcamplogo.png"/></a><a href="https://www.instagram.com/earth_net.info/" target="_blank"><img alt="instagramlogo" class_="social-icon" src="instagramlogo.png"/></a><a href="https://www.facebook.com/Earthnet.info/" target="_blank"><img alt="Facebook_Logo_(2019)" class_="social-icon" src="Facebook_Logo_(2019).png"/></a><a href="https://www.youtube.com/@NewEarthSyndicate-rt6ry" target="_blank"><img alt="youtubelogo" class_="social-icon" src="youtubelogo.png"/></a></header>
+<!-- Navigation Bar -->
+<nav>
+<a href="website.html"><img alt="Home" src="navHOME.jpg"/></a>
+<a href="releases.html"><img alt="Releases" src="navRELEASES200x200.jpg"/></a>
+<a href="lore.html"><img alt="Lore" src="navLORE200x200.jpg"/></a>
+<a href="newsletter.html"><img alt="Newsletter" src="navNEWSLETTER200x200.jpg"/></a>
+<a href="shows.html"><img alt="Shows" src="navSHOWS200x200.jpg"/></a>
+<a href="contact.html"><img alt="Contact" src="navCONTACT200x200.jpg"/></a>
+</nav>
+<div class="show">
+<div class="image-container">
+<img alt="far out" class="showsalien.gif" src="showsalien.gif"/>
+<img alt="Horizontal Line" src="horizontalline5.gif"/>
+</div>
+<div class="image-container">
+<img alt="Command?" class="retro-image" src="Flyer.jpg"/>
+</div>
+</div>
+<!-- More shows -->
+</body></html>
+<!-- Footer with social media links -->
+<!-- We'll add this later -->
 
-    <!-- Footer with social media links -->
-    <!-- We'll add this later -->
-</body>
-</html>
+
