--- a/website.html
+++ b/website.html
@@ -1,32 +1,30 @@
 <!DOCTYPE html>
+
 <html>
 <head>
-    <title>NEW EARTH SYNDICATE</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+<title>NEW EARTH SYNDICATE</title>
+<link href="style.css" rel="stylesheet" type="text/css"/>
 </head>
 <body class="website-page" style="font-family: 'Achron', 'Courier New', Courier, monospace;">
-    <!-- Header section -->
-    <header>
-        <h1>NEW EARTH SYNDICATE</h1>
-    </header>
-    
-    <!-- Navigation Bar -->
-    <nav>
-        <a href="website.html"><img src="navHOME.jpg" alt="Home"></a>
-        <a href="releases.html"><img src="navRELEASES200x200.jpg" alt="Releases"></a>
-        <a href="lore.html"><img src="navLORE200x200.jpg" alt="Lore"></a>
-        <a href="newsletter.html"><img src="navNEWSLETTER200x200.jpg" alt="Newsletter"></a>
-        <a href="shows.html"><img src="navSHOWS200x200.jpg" alt="Shows"></a>
-        <a href="contact.html"><img src="navCONTACT200x200.jpg" alt="Contact"></a>
-    </nav>
-
-    <div>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/h2-petWJw_U" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <img src="horizontalline4.gif" alt="Horizontal Line">
-        <img src="energyman.gif" alt="Juggler">
-        <img src="horizontalline4.gif" alt="Horizontal Line">
-        <img src="juggler.gif" alt="Energy Man">
-    </div>
-
+<!-- Header section -->
+<header>
+<h1>NEW EARTH SYNDICATE</h1>
+<a href="http://newearthsyndicate.bandcamp.com/" target="_blank"><img alt="bandcamplogo" class_="social-icon" src="bandcamplogo.png"/></a><a href="https://www.instagram.com/earth_net.info/" target="_blank"><img alt="instagramlogo" class_="social-icon" src="instagramlogo.png"/></a><a href="https://www.facebook.com/Earthnet.info/" target="_blank"><img alt="Facebook_Logo_(2019)" class_="social-icon" src="Facebook_Logo_(2019).png"/></a><a href="https://www.youtube.com/@NewEarthSyndicate-rt6ry" target="_blank"><img alt="youtubelogo" class_="social-icon" src="youtubelogo.png"/></a></header>
+<!-- Navigation Bar -->
+<nav>
+<a href="website.html"><img alt="Home" src="navHOME.jpg"/></a>
+<a href="releases.html"><img alt="Releases" src="navRELEASES200x200.jpg"/></a>
+<a href="lore.html"><img alt="Lore" src="navLORE200x200.jpg"/></a>
+<a href="newsletter.html"><img alt="Newsletter" src="navNEWSLETTER200x200.jpg"/></a>
+<a href="shows.html"><img alt="Shows" src="navSHOWS200x200.jpg"/></a>
+<a href="contact.html"><img alt="Contact" src="navCONTACT200x200.jpg"/></a>
+</nav>
+<div>
+<iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" frameborder="0" height="315" src="https://www.youtube.com/embed/h2-petWJw_U" width="560"></iframe>
+<img alt="Horizontal Line" src="horizontalline4.gif"/>
+<img alt="Juggler" src="energyman.gif"/>
+<img alt="Horizontal Line" src="horizontalline4.gif"/>
+<img alt="Energy Man" src="juggler.gif"/>
+</div>
 </body>
 </html>
